feat: options display

--- a/main.html
+++ b/main.html
@@ -8,18 +8,18 @@
   </head>
   <body>
     <audio id="background-music" autoplay loop>
-      <source src="background-music.mp3" type="audio/mpeg">
+      <source src="background-music.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
     <div id="cover">
       <div id="title">夢境深處</div>
       <button id="start-button">進入遊戲</button>
-      <button id="egg-button"></button>
+      <button id="egg-button">1</button>
     </div>
-    <div id="container" style="display: none;">
+    <div id="container" style="display: none">
       <div id="scenario"></div>
       <div id="narration"></div>
-      <div id="dialogue-container" style="display: none;">
+      <div id="dialogue-container" style="display: none"></div>
       <div id="dialogue" class="fade-in"></div>
       <div id="options"></div>
     </div>
